--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       padding:50% 50%;
     }
 
-    #canvas canvas{
+    #canvas canvas, #canvas svg{
       position:absolute;
       left:50%;
       top:0;
