feat: 添加声音库

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <span id="d"></span>
   <span id="j"></span>
 </div>
-<script src="../karas/index.js"></script>
+<script src="https://gw.alipayobjects.com/os/lib/karas/0.47.6/index.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
