--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
   <span id="d"></span>
   <span id="j"></span>
 </div>
-<script src="https://gw.alipayobjects.com/os/lib/karas/0.47.6/index.js"></script>
+<script src="https://gw.alipayobjects.com/os/lib/howler/2.2.1/dist/howler.min.js"></script>
+<script src="http://army8735.me/karasjs/karas/index.js"></script>
 <script src="index.js"></script>
+<script>
+  console.log(Howler)
+</script>
 </body>
 </html>
