--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 </head>
 <body>
 <div id="canvas"></div>
+<div>当前渲染模式，点击切换：<label id="tc"><input type="radio" name="type" value="canvas" checked="checked"/>canvas</label> <label id="ts"><input type="radio" name="type" value="svg"/>svg</label></div>
 <div id="control">
   <span id="w"></span>
   <span id="a"></span>
